# ripple

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectralProcessor.cpp  SpectralProcessor.h
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.svelte  app.css
web-ui/src/components/: ActivationScreen.svelte  Knob.svelte  LFOPanel.svelte  Meter.svelte  ModMatrix.svelte  RippleVisualizer.svelte  Select.svelte  Slider.svelte  ThreeBackground.svelte  Toggle.svelte  XYPad.svelte
web-ui/src/lib/: juce-bridge.ts
web-ui/src/stores/: params.ts
